# cache_diff

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
cache_diff/: Cargo.toml  README.md  README.tpl
cache_diff/src/: lib.rs
cache_diff_derive/: Cargo.toml
cache_diff_derive/src/: attributes.rs  fields.rs  lib.rs
usage/: Cargo.toml
usage/src/: main.rs
usage/tests/fails/: missing_display.rs  missing_display.stderr
