[package]
name = "cache_diff"
description = "Generate clean, human readable diffs between two cache structs"
include = ["src/**/*", "LICENSE.md", "README.md"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
cache_diff_derive = { version = "0", optional = true, path = "../cache_diff_derive" }

[features]
default = ["derive"]
derive = ["dep:cache_diff_derive"]
