[package]
name = "cache_diff_derive"
description = "Macros for cache_diff"
include = ["src/**/*", "LICENSE.md", "README.md"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits"] }
proc-macro2 = "1.0.69"
bullet_stream = { version = "0", optional = true }

[lib]
proc-macro = true
